[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/fonts/visitor1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/defaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://rooms/TutorialRoom.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/ui/3x3OneFilled.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ui/arrow.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ui/3x3fillNext.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ui/3x3TwoFilled.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/shapeSprites/shapeShortL.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/ui/availableShapes.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/ui/checkmark.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/ui/3x3InvalidPlace.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/ui/3x3OneDanger.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/ui/xmark.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/ui/3x3MostFilled.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/ui/3x3ValidPlace.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/shapeSprites/shapeL.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/shapeSprites/shapeCross.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
size = 23
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
corner_detail = 1

[node name="TutorialScene" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )
limit_left = 0
limit_top = 0

[node name="Text0" type="Label" parent="."]
margin_right = 299.0
margin_bottom = 157.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "A nebulous force attempts to enter our reality... Please. Delay the inevitable. Hinder the beast's efforts as long as you can..."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text1" type="Label" parent="."]
visible = false
margin_right = 299.0
margin_bottom = 157.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "While stalling the beast, a grid of squares will lie before you.
Every turn, the beast will fill a number of blocks based on the current level. The blocks it'll fill will be grey on the previous turn."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect1_0" type="TextureRect" parent="Text1"]
margin_left = 59.0
margin_top = 281.0
margin_right = 99.0
margin_bottom = 321.0
texture = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect1_1" type="TextureRect" parent="Text1"]
margin_left = 95.0
margin_top = 281.0
margin_right = 135.0
margin_bottom = 321.0
texture = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect1_2" type="TextureRect" parent="Text1"]
margin_left = 131.0
margin_top = 281.0
margin_right = 171.0
margin_bottom = 321.0
texture = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect1_3" type="TextureRect" parent="Text1"]
margin_left = 167.0
margin_top = 281.0
margin_right = 207.0
margin_bottom = 321.0
texture = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect1_4" type="TextureRect" parent="Text1"]
margin_left = 203.0
margin_top = 281.0
margin_right = 243.0
margin_bottom = 321.0
texture = ExtResource( 7 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text2" type="Label" parent="."]
visible = false
margin_right = 299.0
margin_bottom = 157.0
rect_pivot_offset = Vector2( -312, 136 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "If a filled block becomes surrounded on all 8 sides by other filled blocks, a 3 turn countdown will begin. The block must be emptied or un-surrounded before the timer ends."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect2_0" type="TextureRect" parent="Text2"]
margin_left = 92.0
margin_top = 232.0
margin_right = 132.0
margin_bottom = 272.0
texture = ExtResource( 14 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect2_1" type="TextureRect" parent="Text2"]
margin_left = 128.0
margin_top = 232.0
margin_right = 168.0
margin_bottom = 272.0
texture = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect2_2" type="TextureRect" parent="Text2"]
margin_left = 164.0
margin_top = 232.0
margin_right = 204.0
margin_bottom = 272.0
texture = ExtResource( 12 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text3" type="Label" parent="."]
visible = false
margin_right = 299.0
margin_bottom = 157.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "To empty a block, you must place a \"shape\" on it. Your available shapes will be shown in a column on the left."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect3_0" type="TextureRect" parent="Text3"]
margin_left = 121.0
margin_top = 157.0
margin_right = 175.0
margin_bottom = 319.0
texture = ExtResource( 9 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect3_3" type="TextureRect" parent="Text3"]
margin_left = 127.0
margin_top = 163.0
margin_right = 169.0
margin_bottom = 205.0
texture = ExtResource( 16 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect3_4" type="TextureRect" parent="Text3"]
margin_left = 128.0
margin_top = 217.0
margin_right = 168.0
margin_bottom = 259.0
texture = ExtResource( 17 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text4" type="Label" parent="."]
visible = false
margin_right = 299.0
margin_bottom = 157.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Your options are fleeting, however. If you do not use the top shape during your turn, it will disappear."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect3_0" type="TextureRect" parent="Text4"]
margin_left = 77.0
margin_top = 157.0
margin_right = 131.0
margin_bottom = 319.0
texture = ExtResource( 9 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect3_1" type="TextureRect" parent="Text4"]
margin_left = 130.0
margin_top = 218.0
margin_right = 170.0
margin_bottom = 258.0
texture = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect3_2" type="TextureRect" parent="Text4"]
margin_left = 169.0
margin_top = 157.0
margin_right = 223.0
margin_bottom = 319.0
texture = ExtResource( 9 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect3_3" type="TextureRect" parent="Text4"]
margin_left = 83.0
margin_top = 163.0
margin_right = 125.0
margin_bottom = 205.0
texture = ExtResource( 16 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect3_4" type="TextureRect" parent="Text4"]
margin_left = 84.0
margin_top = 217.0
margin_right = 124.0
margin_bottom = 259.0
texture = ExtResource( 17 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect3_5" type="TextureRect" parent="Text4"]
margin_left = 177.0
margin_top = 163.0
margin_right = 217.0
margin_bottom = 205.0
texture = ExtResource( 17 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text5" type="Label" parent="."]
visible = false
margin_right = 299.0
margin_bottom = 157.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "A shape can only be placed on a block if all the squares it overlaps on the grid are filled."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect4_0" type="TextureRect" parent="Text5"]
margin_left = 37.0
margin_top = 176.0
margin_right = 77.0
margin_bottom = 216.0
texture = ExtResource( 8 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect4_1" type="TextureRect" parent="Text5"]
margin_left = 80.0
margin_top = 180.0
margin_right = 120.0
margin_bottom = 220.0
texture = ExtResource( 15 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect4_2" type="TextureRect" parent="Text5"]
margin_left = 57.0
margin_top = 220.0
margin_right = 97.0
margin_bottom = 260.0
texture = ExtResource( 10 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect4_3" type="TextureRect" parent="Text5"]
margin_left = 163.0
margin_top = 176.0
margin_right = 203.0
margin_bottom = 216.0
texture = ExtResource( 8 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect4_4" type="TextureRect" parent="Text5"]
margin_left = 206.0
margin_top = 180.0
margin_right = 246.0
margin_bottom = 220.0
texture = ExtResource( 11 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect4_5" type="TextureRect" parent="Text5"]
margin_left = 183.0
margin_top = 220.0
margin_right = 223.0
margin_bottom = 260.0
texture = ExtResource( 13 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text6" type="Label" parent="."]
visible = false
margin_right = 299.0
margin_bottom = 157.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "To that end, during your turn you may click a block to fill it. This could let you place a shape you otherwise may not have been able to place."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text7" type="Label" parent="."]
visible = false
margin_right = 299.0
margin_bottom = 157.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "A turn will pass everytime you place a shape or fill a block. This will advance timers, allow the beast to fill blocks, and remove your top available shape."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text8" type="Label" parent="."]
visible = false
margin_right = 299.0
margin_bottom = 157.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Please. Delay the beast. Though your options are temporary and your solutions are short-lived, I trust you'll give us time for goodbyes."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_top = 322.0
margin_right = 300.0
margin_bottom = 375.0
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "next"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
